--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/app_color">
 
     <RelativeLayout
@@ -40,21 +40,40 @@
                 android:textAppearance="@style/inter_400_12_16"
                 android:textColor="@color/black" />
 
-            <!-- Password Field -->
-            <EditText
-                android:id="@+id/passwordEditText"
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/textInputLayoutPassword"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="@dimen/_24sdp"
-                android:background="@drawable/bg_edit_text"
-                android:hint="Enter Password"
+                app:boxCornerRadiusBottomEnd="4dp"
+                app:boxCornerRadiusBottomStart="4dp"
+                app:boxCornerRadiusTopEnd="4dp"
                 android:layout_marginBottom="@dimen/_12sdp"
-                android:paddingHorizontal="@dimen/_16sdp"
-                android:paddingVertical="@dimen/_14sdp"
-                android:singleLine="true"
-                android:inputType="textPassword"
-                android:textAppearance="@style/inter_400_12_16"
-                android:textColor="@color/black" />
+                app:boxCornerRadiusTopStart="4dp"
+                app:boxStrokeWidth="0dp"
+                android:layout_marginHorizontal="@dimen/_24sdp"
+                app:passwordToggleDrawable="@drawable/ic_password_toggle"
+                app:boxStrokeWidthFocused="0dp"
+                app:hintEnabled="false"
+                app:passwordToggleEnabled="true"
+                app:passwordToggleTint="@color/placeholderTextColor">
+
+                <EditText
+                    android:id="@+id/passwordEditText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingHorizontal="@dimen/_16sdp"
+                    android:paddingVertical="@dimen/_14sdp"
+                    android:hint="Enter password"
+                    android:imeOptions="actionDone"
+                    android:importantForAutofill="no"
+                    android:inputType="textPassword"
+                    android:textAppearance="@style/inter_400_12_16"
+                    android:background="@drawable/bg_edit_text"
+                    android:singleLine="true" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
 
             <!-- Login Button -->
             <androidx.appcompat.widget.AppCompatButton
