--- a/app/src/main/res/layout/fragment_inventory_items.xml
+++ b/app/src/main/res/layout/fragment_inventory_items.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:aapt="http://schemas.android.com/aapt"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:tag="layout/fragment_inventory_items_0">
@@ -20,8 +21,7 @@
             android:gravity="center_vertical"
             android:orientation="vertical"
             android:paddingHorizontal="4dp"
-            android:paddingVertical="5dp"
-            android:visibility="gone">
+            android:paddingVertical="5dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -152,8 +152,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
-            android:orientation="vertical"
-            android:visibility="gone">
+            android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -164,7 +163,7 @@
                 android:orientation="horizontal">
 
                 <TextView
-
+                    android:id="@+id/tv_count"
                     android:layout_width="match_parent"
                     android:layout_height="70dp"
                     android:layout_weight="1"
@@ -192,165 +191,8 @@
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/lnrItem"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/_24sdp"
-            android:layout_marginTop="@dimen/_16sdp"
-            android:background="@drawable/bg_filled_outlined"
-            android:orientation="vertical"
-            android:padding="@dimen/_12sdp">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:orientation="horizontal">
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:letterSpacing="-0.02"
-                        android:text="T: Cleantech"
-                        android:textAppearance="@style/inter_400_10_10"
-                        android:textColor="@color/color_0F0F0F" />
-
-                </LinearLayout>
-
-                <TextView
-                    android:id="@+id/txtLastUpdatedTime"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:gravity="end"
-                    android:letterSpacing="-0.02"
-                    android:text="LIC# RKA 5876"
-                    android:textAppearance="@style/inter_400_10_10"
-                    android:textColor="@color/color_0F0F0F" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:orientation="horizontal">
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:letterSpacing="-0.02"
-                        android:text="F: Professor -Industries"
-                        android:textAppearance="@style/inter_400_10_10"
-                        android:textColor="@color/color_0F0F0F" />
-
-                </LinearLayout>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:gravity="end"
-                    android:letterSpacing="-0.02"
-                    android:text="DT:12/21/2024 12:45 PM"
-                    android:textAppearance="@style/inter_400_10_10"
-                    android:textColor="@color/color_0F0F0F" />
-
-            </LinearLayout>
-
-        </LinearLayout>
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/_24sdp"
-            android:layout_marginTop="@dimen/_8sdp"
-            android:layout_marginBottom="@dimen/_16sdp"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/bt_clear"
-                android:layout_width="@dimen/_36sdp"
-                android:layout_height="@dimen/_36sdp"
-                android:background="@drawable/bg_filled_outlined"
-                android:backgroundTint="@color/color_ff0000"
-                android:importantForAccessibility="no"
-                android:scaleType="centerInside"
-                android:src="@drawable/ic_delete" />
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginHorizontal="@dimen/_8sdp"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:background="@drawable/bg_order_details"
-                    android:backgroundTint="@color/color_EFF0F4"
-                    android:clickable="true"
-                    android:focusable="true"
-                    android:foreground="?android:attr/selectableItemBackgroundBorderless"
-                    android:gravity="center_vertical|center"
-                    android:paddingHorizontal="@dimen/_8sdp"
-                    android:text="Scan Count"
-                    android:textAppearance="@style/inter_400_12_16"
-                    android:textColor="@color/black" />
-
-                <TextView
-                    android:id="@+id/tv_count"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_marginStart="-4dp"
-                    android:background="@drawable/bg_scan_count"
-                    android:clickable="true"
-                    android:focusable="true"
-                    android:foreground="?android:attr/selectableItemBackgroundBorderless"
-                    android:gravity="center_vertical|center"
-                    android:paddingHorizontal="@dimen/_12sdp"
-                    android:text="50"
-                    android:textAppearance="@style/inter_400_12_16"
-                    android:textColor="@color/black" />
-            </LinearLayout>
-
-
-            <TextView
-                android:id="@+id/save"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@drawable/bg_filled_outlined"
-                android:backgroundTint="@color/color_388E3C"
-                android:clickable="true"
-                android:focusable="true"
-                android:foreground="?android:attr/selectableItemBackgroundBorderless"
-                android:gravity="center_vertical|center"
-                android:letterSpacing="-0.02"
-                android:text="Save Scanned Item"
-                android:textAppearance="@style/inter_400_12_16"
-                android:textColor="@color/color_388E3C" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
             android:orientation="vertical">
@@ -365,20 +207,12 @@
                 <ListView
                     android:id="@+id/LvTags"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginHorizontal="@dimen/_24sdp"
-                    android:divider="@android:color/transparent"
-                    android:dividerHeight="@dimen/_8sdp"
-                    android:scrollbars="none"
-                    tools:listitem="@layout/list_tag_item" />
+                    android:layout_height="match_parent" />
 
                 <ListView
                     android:id="@+id/LvSearchTags"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:divider="@android:color/transparent"
-                    android:dividerHeight="@dimen/_8sdp"
-                    android:scrollbars="none"
                     android:visibility="gone" />
 
                 <androidx.recyclerview.widget.RecyclerView
@@ -425,25 +259,33 @@
             android:orientation="horizontal">
 
             <LinearLayout
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="@dimen/_24sdp"
+                android:layout_marginHorizontal="2dp"
                 android:layout_weight="1">
 
-                <androidx.appcompat.widget.AppCompatButton
+                <Button
                     android:id="@+id/bt_start"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/_42sdp"
-                    android:layout_alignParentBottom="true"
-                    android:layout_gravity="bottom"
-                    android:background="@drawable/button_background"
-                    android:backgroundTint="@color/color_388E3C"
-                    android:letterSpacing="-0.02"
-                    android:text="Scan"
-                    android:textAllCaps="false"
-                    android:textAppearance="@style/inter_700_14_12"
+                    android:layout_height="35dp"
+                    android:background="@drawable/bt_design"
+                    android:text="start"
                     android:textColor="@color/white" />
+            </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="2dp"
+                android:layout_weight="1">
+
+                <Button
+                    android:id="@+id/bt_clear"
+                    android:layout_width="match_parent"
+                    android:layout_height="35dp"
+                    android:background="@drawable/bt_design_gray"
+                    android:text="clear"
+                    android:textColor="@color/white" />
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
